<resources>
    <string name="application_name">Anywhere Aptitude</string>
    <string name="login">LOGIN</string>
    <string name="signup_popup">Don\'t Have a Account? Register Here</string>
    <string name="email_hint">Email</string>
    <string name ="password_hint">Password</string>
    <string name ="signinwithgoogle">Sign up with Google!</string>
    <string name ="signinwithemail">Sign In with Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="skip">Skip For Now</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="start_quiz">Start Quiz!</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="domains">Domains</string>
    <string name="quantitative">Quantitative</string>
    <string name="verbal">Verbal</string>
    <string name="logical">Logical</string>
    <string name="puzzle">Puzzle</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="instruction"><![CDATA[->No of Questions:10 \n ->Time given: 10 mins \n ->Score: 1 mark for each correct question \n ->NO NEGATIVE MARKING \n ->Enter the correct option by clicking on it. \n ->Click START QUIZ to start the test. Click back to select any other test]]></string>
    <string name="instructions">Instructions</string>
    <string name="difficulty_levels">Difficulty Levels</string>
    <string name="normal">NORMAL</string>
    <string name="medium">MEDIUM</string>
    <string name="difficult">DIFFICULT</string>
    <string name="select_different_domain">Select Different Domain</string>
    <string name="questions_1_x">Questions: 1/x</string>
    <string name="time">00:30</string>
    <string name="questionText">Here will be the question in the test</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="option4">option4</string>
    <string name="skip_question">SKIP</string>
    <string name="submit">SUBMIT</string>
    <string name="correct">Correct</string>
    <string name="skipped">Skipped</string>
    <string name="wrong">Wrong</string>
    <string name="time_required">Time Required</string>
    <string name="see_solutions">SEE SOLUTIONS</string>
    <string name="take_another_test">TAKE ANOTHER TEST</string>
    <string name="solutions">Solutions</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
</resources>