<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionspage"
    android:orientation="vertical"
    android:background="@drawable/background1"
    android:padding="20dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">
    <TextView
        android:id="@+id/questionno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/questions_1_x"
        android:textColor="#00897B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/dancingscript" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/time"
        android:textColor="#FAF7F7"
        android:textSize="40sp" />
</RelativeLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/questionText"
        android:textColor="#FAF7F7"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1"
            android:textColor="#FAF7F7"
            android:visibility="visible" />
        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FAF7F7"
            android:text="@string/option2" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FAF7F7"
            android:text="@string/option3"
            />

        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FAF7F7"
            android:text="@string/option4"
            />


    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">
        <Button
            android:id="@+id/skip"
            android:layout_marginStart="20dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:text="@string/skip_question"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:gravity="center" />
        <Button
            android:id="@+id/submit_next"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:background="@drawable/button_border"
            android:text="@string/submit"
            android:textSize="20sp" />
    </RelativeLayout>


</LinearLayout>