<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".instructionpage">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/greatvibes"
        android:text="@string/instructions"
        android:textColor="#FFFFFF"
        android:textSize="50sp"  />

    <TextView
        android:id="@+id/guidelines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/instruction"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:fontFamily="sans-serif" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/back1"
            android:layout_width="118dp"
            android:layout_height="73dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/go_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/dancingscript"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="245dp"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/dancingscript"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/start"
            android:layout_width="111dp"
            android:layout_height="73dp"
            android:layout_marginStart="270dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/go_ahead" />

    </RelativeLayout>
</LinearLayout>