<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".DomainOptions">

    <Button
        android:id="@+id/popup"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/button_border"
        android:drawableStart="@drawable/user" />

    <TextView
        android:id="@+id/domains"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/greatvibes"
        android:gravity="center_horizontal"
        android:text="@string/domains"
        android:textColor="#FFFFFF"
        android:textSize="50sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/dancingscript"
            android:gravity="center_horizontal"
            android:text="@string/quantitative"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginStart="205dp"
            android:fontFamily="@font/dancingscript"
            android:gravity="center_horizontal"
            android:text="@string/verbal"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <ImageButton
            android:id="@+id/button_quants"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/verb" />

        <ImageButton
            android:id="@+id/button_verbal"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="205dp"
            android:background="@drawable/verb" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/dancingscript"
            android:gravity="center_horizontal"
            android:text="@string/logical"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginStart="205dp"
            android:fontFamily="@font/dancingscript"
            android:gravity="center_horizontal"
            android:text="@string/puzzle"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <ImageButton
            android:id="@+id/button_logic"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/logic" />

        <ImageButton
            android:id="@+id/button_puzzle"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="205dp"
            android:background="@drawable/puzzle" />
    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/dancingscript"
        android:gravity="center_horizontal"
        android:text="@string/application_name"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />


</LinearLayout>