<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scoreboard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".score">


    <TextView
        android:id="@+id/scoreboard1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/greatvibes"
        android:text="Scoreboard"
        android:textColor="#FFFFFF"
        android:textSize="50dp"  />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/correct"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="#00FF00"
            android:textSize="40sp"
            android:layout_marginStart="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:fontFamily="@font/greatvibes"/>
        <TextView
           android:id="@+id/skipped"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:layout_marginStart="130dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:fontFamily="@font/greatvibes"
            />

        <TextView
            android:id="@+id/wrong"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="250dp"
            android:textColor="#FF0000"
            android:textSize="40sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:fontFamily="@font/greatvibes"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="#00FF00"
            android:textSize="36sp"
            android:layout_marginStart="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="@string/correct"
            android:fontFamily="@font/greatvibes"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:layout_marginStart="130dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="@string/skipped"
            android:fontFamily="@font/greatvibes"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="250dp"
            android:textColor="#FF0000"
            android:textSize="36sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="@string/wrong"
            android:fontFamily="@font/greatvibes"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/time_required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"
        android:fontFamily="@font/greatvibes"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"
        android:fontFamily="@font/greatvibes"
        android:text="@string/time_required"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/solutions"
            android:layout_marginStart="10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:text="@string/see_solutions"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:gravity="center" />

        <Button
            android:id="@+id/anothertest"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="210dp"
            android:background="@drawable/button_border"
            android:text="@string/take_another_test"
            android:textAlignment="center"
            android:textSize="20sp" />

    </RelativeLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        app:fontFamily="@font/dancingscript"
        android:textAlignment= "center"
        android:layout_gravity="center_horizontal" />

</LinearLayout>